# THU-BDC2026

./: .gitignore  AGENTS.md  Dockerfile  GUIDE.md  README.md  docker-compose.yml  factor.sh  get_stock_data.py  get_stock_data_illustration.txt  pyproject.toml  requirements.txt  tensorboard.sh  test.sh  train.sh
config/: builtin_factors.json  datasets.yaml  factor_store.json  factors.yaml  storage.yaml
data/: failed_stocks.csv  hs300_stock_list.csv  run.sh  split_train_test.py
docs/: architecture_optimization_2026-03-27.md  optimization-playbook.md  performance-baseline-2026-04-04.md  release-gate-2026-04.md
output/: prediction_scores.csv  result.csv
temp/: data_manifest_stock_fetch_smoke.json  factor_snapshot_test.json  factor_store_builtin_test.json  factor_store_runtime_test.json  factor_store_test.json  final_factor_snapshot_smoke.json  hs300_stock_list.csv  stock_data_smoke.csv  tmp.csv
test/: __init__.py  score_docker.py  score_self.py  test.py  test_batch_validation_import.py  test_cli_error_paths.py  test_dataset_manifest_linkage.py  test_entrypoint_scripts.py  test_experiment_runner.py  test_factor_graph_pipeline.py  test_factor_store_engine.py  test_get_stock_data_bridge.py  test_hf_daily_factor_pipeline.py  test_ingestion_adapters.py  test_ingestion_adapters_live.py  test_ingestion_api.py  test_ingestion_cli.py  test_ingestion_imports.py  test_ingestion_pipeline_service.py  test_ingestion_registry.py  test_ingestion_runtime.py  test_ingestion_service.py  test_manifest_contracts.py  test_model_forward.py  test_model_module_parity.py  test_windows.py  (+8 more)
(+120 files in other folders)
