[project]
name = "baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "akshare>=1.18.28",
    "baostock>=0.8.9",
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "pandas>=2.3.2",
    "plotly>=5.24.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.38.0",
    "streamlit-autorefresh>=1.0.1",
    "ta-lib>=0.6.8",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.32.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
